# tic-tac-toe-ai

./: CMakeLists.txt  Dockerfile  Makefile  makefile
.github/workflows/: ci.yml
src/: board.cc  board.h  main.cc  search.cc  search.h
tests/: board.cc  helper.h  search.cc
